Letsencrypt OCSP EOL (https://letsencrypt.org/2024/12/05/ending-ocsp/).
Disabled stapling

--- a/wo/cli/templates/nginx-core.mustache
+++ b/wo/cli/templates/nginx-core.mustache
@@ -74,7 +74,7 @@ http {
 	# oscp settings
 	resolver 8.8.8.8 1.1.1.1 8.8.4.4 1.0.0.1 valid=300s;
 	resolver_timeout 10;
-	ssl_stapling on;
+	ssl_stapling off;
 
 	##
 	# Basic Settings
