--- a/wo/cli/templates-adjusted/virtualconf.mustache
+++ b/wo/cli/templates-adjusted/virtualconf.mustache
@@ -66,8 +66,12 @@ server {
     }
     {{/static}}
 
-    {{^static}}include {{#basic}}common/php.conf;{{/basic}}{{#wpfc}}common/wpfc.conf;{{/wpfc}}{{#wpsc}}common/wpsc.conf;{{/wpsc}}{{#wpredis}}common/redis.conf;{{/wpredis}}{{#wprocket}}common/wprocket.conf;{{/wprocket}}{{#wpce}}common/wpce.conf;{{/wpce}}
-    {{#wpsubdir}}include common/wpsubdir.conf;{{/wpsubdir}}{{/static}}
+    {{^static}}
+    set $php_ver {{wo-php}};
+    set $pool_name {{pool-name}};
+    include {{#basic}}common/php.conf;{{/basic}}{{#wpfc}}common/wpfc.conf;{{/wpfc}}{{#wpsc}}common/wpsc.conf;{{/wpsc}}{{#wpredis}}common/redis.conf;{{/wpredis}}{{#wprocket}}common/wprocket.conf;{{/wprocket}}{{#wpce}}common/wpce.conf;{{/wpce}}
+    {{#wpsubdir}}include common/wpsubdir.conf;{{/wpsubdir}}
+    {{/static}}
     {{#wp}}include common/wp.conf;{{/wp}}
     include common/locations-wo.conf;{{/alias}}{{/proxy}}
     include {{webroot}}/conf/nginx/*.conf;
