--- a/wo/cli/templates/redis.mustache
+++ b/wo/cli/templates/redis.mustache
@@ -10,14 +10,14 @@ location / {
 location /redis-fetch {
     internal  ;
     set  $redis_key $args;
-    redis_pass redis;
+    redis_pass $redis_addr;
 }
 location /redis-store {
     internal  ;
     set_unescape_uri $key $arg_key ;
     redis2_query  set $key $echo_request_body;
     redis2_query expire $key 14400;
-    redis2_pass redis;
+    redis2_pass $redis_addr;
 
 }
 
@@ -39,5 +39,5 @@ location ~ \.php$ {
   more_set_headers 'X-SRCache-Store-Status $srcache_store_status';
 
   include fastcgi_params;
-  fastcgi_pass {{upstream}};
+  fastcgi_pass unix:/run/php/php${php_ver}-fpm-${pool_name}.sock;
 }
