Fix version format for log and pid files

--- a/wo/cli/templates/php-fpm-master.mustache
+++ b/wo/cli/templates/php-fpm-master.mustache
@@ -1,6 +1,6 @@
 [global]
-pid = /run/php/php{{php_ver}}-fpm-{{slug}}.pid
-error_log = /var/log/php/{{php_ver}}/{{slug}}/error.log
+pid = /run/php/php{{php_version}}-fpm-{{slug}}.pid
+error_log = /var/log/php/{{php_version}}/{{slug}}/error.log
 log_level = notice
 emergency_restart_threshold = 10
 emergency_restart_interval = 1m
