--- a/wo/cli/templates/php-fpm-pool.mustache
+++ b/wo/cli/templates/php-fpm-pool.mustache
@@ -20,8 +20,8 @@ request_terminate_timeout = 300
 
 ; logging
 catch_workers_output = yes
-access.log = /var/log/php/{{php_ver}}/{{slug}}/access.log
-slowlog = /var/log/php/{{php_ver}}/{{slug}}/slow.log
+access.log = /var/log/php/{{php_version}}/{{slug}}/access.log
+slowlog = /var/log/php/{{php_version}}/{{slug}}/slow.log
 
 ; disable functions
 php_admin_value[disable_functions] = disable_functions = \
