--- a/wo/cli/templates/php-fpm-pool.mustache
+++ b/wo/cli/templates/php-fpm-pool.mustache
@@ -27,7 +27,7 @@ access.log = /var/log/php/{{php_version}}/{{slug}}/access.log
 slowlog = /var/log/php/{{php_version}}/{{slug}}/slow.log
 
 ; disable functions
-php_admin_value[disable_functions] = disable_functions = \
+php_admin_value[disable_functions] = \
   exec,shell_exec,system,passthru,popen,proc_open,proc_close,proc_terminate,proc_nice,pcntl_exec,dl,\
   link,symlink,highlight_file,show_source,fpassthru,virtual,escapeshellcmd,ini_alter,\
   diskfreespace,tmpfile,getmyuid,posix_ctermid,posix_getcwd,posix_getegid,posix_geteuid,posix_getgid,\
