PHP-FPM pool config does not support breakline

--- a/wo/cli/templates/php-fpm-pool.mustache
+++ b/wo/cli/templates/php-fpm-pool.mustache
@@ -27,16 +27,7 @@ access.log = /var/log/php/{{php_version}}/{{slug}}/access.log
 slowlog = /var/log/php/{{php_version}}/{{slug}}/slow.log
 
 ; disable functions
-php_admin_value[disable_functions] = \
-  exec,shell_exec,system,passthru,popen,proc_open,proc_close,proc_terminate,proc_nice,pcntl_exec,dl,\
-  link,symlink,highlight_file,show_source,fpassthru,virtual,escapeshellcmd,ini_alter,\
-  diskfreespace,tmpfile,getmyuid,posix_ctermid,posix_getcwd,posix_getegid,posix_geteuid,posix_getgid,\
-  posix_getgrgid,posix_getgrnam,posix_getgroups,posix_getlogin,posix_getpgid,posix_getpgrp,\
-  posix_getpid,posix_getppid,posix_getpwuid,posix_getrlimit,posix_getsid,posix_getuid,\
-  posix_isatty,posix_kill,posix_mkfifo,posix_setegid,posix_seteuid,posix_setgid,posix_setpgid,\
-  posix_setsid,posix_setuid,posix_times,posix_ttyname,posix_uname,\
-  socket_accept,socket_bind,socket_clear_error,socket_close,socket_connect,\
-  socket_listen,socket_create_listen,socket_create_pair,socket_read,stream_socket_server
+php_admin_value[disable_functions] = "exec,shell_exec,system,passthru,popen,proc_open,proc_close,proc_terminate,proc_nice,pcntl_exec,dl,link,symlink,highlight_file,show_source,fpassthru,virtual,escapeshellcmd,ini_alter,diskfreespace,tmpfile,getmyuid,posix_ctermid,posix_getcwd,posix_getegid,posix_geteuid,posix_getgid,posix_getgrgid,posix_getgrnam,posix_getgroups,posix_getlogin,posix_getpgid,posix_getpgrp,posix_getpid,posix_getppid,posix_getpwuid,posix_getrlimit,posix_getsid,posix_getuid,posix_isatty,posix_kill,posix_mkfifo,posix_setegid,posix_seteuid,posix_setgid,posix_setpgid,posix_setsid,posix_setuid,posix_times,posix_ttyname,posix_uname,socket_accept,socket_bind,socket_clear_error,socket_close,socket_connect,socket_listen,socket_create_listen,socket_create_pair,socket_read,stream_socket_server"
 
 ; restrict filesystem
 php_admin_value[open_basedir] = "{{webroot}}:/usr/share/php/:/tmp/:/var/run/nginx-cache/:/dev/urandom:/dev/shm:/var/lib/php/sessions/"
