--- a/wo/cli/templates/backstop.config.js.mustache
+++ b/wo/cli/templates/backstop.config.js.mustache
@@ -18,8 +18,14 @@ module.exports = {
   engineOptions: { args: ["--no-sandbox"] },
   asyncCaptureLimit: 5,
   asyncCompareLimit: 50,
+  paths: {
+    bitmaps_reference: "backstop_data/bitmaps_reference",
+    bitmaps_test: "backstop_data/bitmaps_test",
+    engine_scripts: "backstop_data/engine_scripts",
+    html_report: "backstop_data/html_report",
+    ci_report: "backstop_data/ci_report"
+  },
   debug: false,
   debugWindow: false,
   report: ["CI", "html"]
 };
-
