Adjusting paths for backstopjs

--- a/wo/cli/templates/backstop.config.js.mustache
+++ b/wo/cli/templates/backstop.config.js.mustache
@@ -19,11 +19,11 @@ module.exports = {
   asyncCaptureLimit: 5,
   asyncCompareLimit: 50,
   paths: {
-    bitmaps_reference: "backstop_data/bitmaps_reference",
-    bitmaps_test: "backstop_data/bitmaps_test",
-    engine_scripts: "backstop_data/engine_scripts",
-    html_report: "backstop_data/html_report",
-    ci_report: "backstop_data/ci_report"
+    bitmaps_reference: "{{{paths_root}}}/bitmaps_reference",
+    bitmaps_test: "{{{paths_root}}}/bitmaps_test",
+    engine_scripts: "{{{paths_root}}}/engine_scripts",
+    html_report: "{{{paths_root}}}/html_report",
+    ci_report: "{{{paths_root}}}/ci_report"
   },
   debug: false,
   debugWindow: false,
